<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_select_hours">Select hours</string>
    <string name="mdtp_select_minutes">Select minutes</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="activity_alert_dialog_text_ok">OK</string>
    <string name="club_btn_create">Create</string>
    <string name="club_city">Location</string>
    <string name="club_identity">ID number</string>
    <string name="club_identity_digits">0123456789X</string>
    <string name="club_identity_hint">Please enter your ID number</string>
    <string name="club_intro">Brief Introduction</string>
    <string name="club_intro_hint">Please Enter Club Intro</string>
    <string name="club_logo">Logo</string>
    <string name="club_name">Club Name</string>
    <string name="club_name_hint">Please Enter Club Name</string>
    <string name="club_phone">Mobile</string>
    <string name="club_phone_digits">0123456789</string>
    <string name="club_phone_hint">Please enter your mobile</string>
    <string name="club_qq">Twitter</string>
    <string name="club_qq_hint">Please enter your Twitter</string>
    <string name="club_realname">Real Name</string>
    <string name="club_realname_hint">Please enter your real name</string>
    <string name="empty" />
    <string name="get_verification_code">Sent</string>
    <string name="label_heart_rate_anaerobic_area">anaerobic</string>
    <string name="label_heart_rate_burning_fat_area">fat burning</string>
    <string name="label_heart_rate_customize">customization</string>
    <string name="label_heart_rate_desc_and_unit">heart rate limit (BPM)</string>
    <string name="label_heart_rate_interval">heart rate interval</string>
    <string name="label_heart_rate_limit_area">limit</string>
    <string name="label_heart_rate_recovery_area">recovery</string>
    <string name="label_heart_rate_train_area">training</string>
    <string name="private_club_help_text">"The information of private clubs can't be seen by non-members, and we won't recommend your club to other people."</string>
    <string name="select_from_map">Choose on map</string>
    <string name="set_to_private_clubs">Set as a private club</string>
    <string name="str_account_manage_confirm_new_pwd">Re-type new</string>
    <string name="str_account_manage_please_enter_new_pwd">New password</string>
    <string name="str_account_manage_please_input_old_pwd">Old password</string>
    <string name="str_account_manage_pls_set_pwd">Please set your login password</string>
    <string name="str_account_manage_two_pwd_not_same">Passwords not match</string>
    <string name="str_navigation_desc_circle_waypoint">Light Blue Round Dot: Navigation Waypoints</string>
    <string name="str_navigation_desc_first_item_set_route">A. Plan Navigation</string>
    <string name="str_navigation_desc_first_item_set_route_desc">You can set your start location, stop location and waypoints. SpeedX will plan your navigation route automotically</string>
    <string name="str_navigation_desc_first_title_set_nav_route">1. Set Navigation Route</string>
    <string name="str_navigation_desc_how_to_control_map_size">B. How to Change Map Scale</string>
    <string name="str_navigation_desc_how_to_end_nav">C. How to End Navigation</string>
    <string name="str_navigation_desc_nav_ui">A. Navigation UI</string>
    <string name="str_navigation_desc_nav_ui_after_sync_completed">SpeedForce will show the navigation route when synchronization is completed</string>
    <string name="str_navigation_desc_red_destination">Red Dot: Navigation End Location</string>
    <string name="str_navigation_desc_second_item_sync_data_to_central">B. Synchronize Navigation Data</string>
    <string name="str_navigation_desc_second_item_sync_data_to_central_desc">SpeedX App will transfer navigation data to SpeedForce by clicking \\\"Synchornise\\\" button.(Note: Please keep the phone and SpeedForce connected while synchronizing)</string>
    <string name="str_navigation_desc_second_title_central_help">2. SpeedForce Operating Instructions</string>
    <string name="str_navigation_desc_short_press_left_to_zoomout">zoom out map by short press left-button</string>
    <string name="str_navigation_desc_short_press_right_to_zoomin">zoom in map by short press right-button</string>
    <string name="str_navigation_desc_way_to_end_nav">SpeedForce will stop navigation when you arrive. You can long press the main button to stop navigation as well.</string>
    <string name="str_navigation_desc_white_arrow">White Arrow: Your current location and direction</string>
    <string name="str_navigation_desc_white_origin">White Dot: Navigation Start Location</string>
    <string name="str_please_input_vcode">Please enter</string>
    <string name="vCode">Verification Code</string>
</resources>