<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_14" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/str_navigation_desc_first_title_set_nav_route" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:src="@drawable/img_navigation_desc_nav_index" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/str_navigation_desc_first_item_set_route" />
        <TextView android:textSize="@dimen/font_12" android:textColor="#bb212121" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/str_navigation_desc_first_item_set_route_desc" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/str_navigation_desc_second_item_sync_data_to_central" />
        <TextView android:textSize="@dimen/font_12" android:textColor="#bb212121" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/str_navigation_desc_second_item_sync_data_to_central_desc" />
        <TextView android:textSize="@dimen/font_14" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/str_navigation_desc_second_title_central_help" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_nav_ui" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:src="@drawable/img_navigation_desc_nav_ui" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_nav_ui_after_sync_completed" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_white_origin" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_red_destination" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_circle_waypoint" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_white_arrow" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/str_navigation_desc_how_to_control_map_size" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:src="@drawable/img_navigation_desc_nav_control_map_size" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_short_press_left_to_zoomout" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:text="@string/str_navigation_desc_short_press_right_to_zoomin" />
        <TextView android:textSize="@dimen/font_12" android:textColor="@color/color_main_desc_text_black_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/str_navigation_desc_how_to_end_nav" />
        <TextView android:textSize="@dimen/font_12" android:textColor="#bb212121" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.5dip" android:layout_marginBottom="67.5dip" android:text="@string/str_navigation_desc_way_to_end_nav" />
    </LinearLayout>
</ScrollView>