<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#fffffffe" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:paddingBottom="110.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/club_create_profile_edit_lay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip">
                <FrameLayout android:id="@id/club_create_head_lay" android:paddingTop="13.0dip" android:paddingRight="14.799988dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_head_tv" android:text="@string/club_logo" style="@style/club_profile_text_style" />
                    <com.beastbikes.framework.ui.android.widget.CircleImageView android:layout_gravity="center|right" android:id="@id/club_create_head_civ" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="12.5dip" android:src="@drawable/ic_avatar_club" android:scaleType="centerInside" android:contentDescription="@string/empty" />
                    <ImageView android:layout_gravity="center|right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_club_arrow_right" android:contentDescription="@string/empty" />
                </FrameLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_name_tv" android:text="@string/club_name" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_name_et" android:hint="@string/club_name_hint" android:maxLength="12" android:layout_toRightOf="@id/club_create_name_tv" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <FrameLayout android:id="@id/club_create_city_lay" android:paddingRight="14.799988dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:layout_gravity="center_vertical" android:id="@id/club_create_city_tv" android:text="@string/club_city" style="@style/club_profile_text_style" />
                    <TextView android:layout_gravity="center|right" android:id="@id/club_create_city_content_tv" android:paddingRight="7.0dip" android:hint="@string/select_from_map" style="@style/club_profile_edit_text_style" />
                    <FrameLayout android:layout_gravity="center|right" android:layout_width="wrap_content" android:layout_height="fill_parent">
                        <ImageView android:layout_gravity="center|right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_club_arrow_right" android:contentDescription="@string/empty" />
                    </FrameLayout>
                </FrameLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:id="@id/club_create_intro_lay" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_intro_tv" android:text="@string/club_intro" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_intro_et" android:hint="@string/club_intro_hint" android:maxLength="16" android:layout_toRightOf="@id/club_create_intro_tv" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_realname_tv" android:text="@string/club_realname" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_realname_et" android:hint="@string/club_realname_hint" android:maxLength="12" android:layout_toRightOf="@id/club_create_realname_tv" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="10.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_phone_tv" android:text="@string/club_phone" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <TextView android:id="@id/club_create_zone_tv" android:layout_marginLeft="15.0dip" android:text="+86" android:layout_toRightOf="@id/club_create_phone_tv" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <View android:id="@id/club_create_divider" android:background="#cc222222" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:layout_toRightOf="@id/club_create_zone_tv" android:layout_centerVertical="true" />
                    <EditText android:id="@id/club_create_phone_et" android:hint="@string/club_phone_hint" android:digits="@string/club_phone_digits" android:layout_toRightOf="@id/club_create_divider" android:inputType="number" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_verificationcode_tv" android:text="@string/vCode" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_vcode_et" android:hint="@string/str_please_input_vcode" android:maxLength="6" android:layout_toLeftOf="@id/club_create_verificationcode_btn" android:inputType="number" style="@style/club_profile_edit_text_style" />
                    <Button android:textSize="12.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/club_create_verificationcode_btn" android:background="@drawable/bg_verificationcodebtn" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginRight="14.5dip" android:minWidth="75.0dip" android:text="@string/get_verification_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_qq_tv" android:text="@string/club_qq" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_qq_et" android:hint="@string/club_qq_hint" android:maxLength="12" android:layout_toRightOf="@id/club_create_qq_tv" android:inputType="number" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
                <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
                <RelativeLayout android:gravity="center_vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                    <TextView android:id="@id/club_create_identity_number_tv" android:text="@string/club_identity" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                    <EditText android:id="@id/club_create_identity_number_et" android:hint="@string/club_identity_hint" android:maxLength="18" android:digits="@string/club_identity_digits" android:layout_toRightOf="@id/club_create_identity_number_tv" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/club_profile_edit_text_style" />
                </RelativeLayout>
            </LinearLayout>
            <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="15.0dip">
                <TextView android:id="@id/privateclubtv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/set_to_private_clubs" android:layout_centerVertical="true" style="@style/club_profile_text_style" />
                <RelativeLayout android:id="@id/openprivateclubrl" android:layout_width="35.0dip" android:layout_height="fill_parent" android:layout_toRightOf="@id/privateclubtv">
                    <ImageView android:layout_width="15.0dip" android:layout_height="15.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="13.0dip" android:layout_marginBottom="16.0dip" android:src="@drawable/ic_privateclubhelp" />
                </RelativeLayout>
                <com.beastbikes.android.widget.SwitchView android:id="@id/create_club_private_sv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.5dip" android:checked="false" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:background="#ffe5e5e5" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" />
            <TextView android:textSize="12.0sp" android:textColor="#ff9f9f9f" android:id="@id/privateclubhelptv" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="16.0dip" android:text="@string/private_club_help_text" />
        </LinearLayout>
    </ScrollView>
    <Button android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/club_create_create_btn" android:background="#ffe34848" android:layout_width="fill_parent" android:layout_height="44.0dip" android:text="@string/club_btn_create" />
</FrameLayout>