<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/activity_speedx_heart_rate_setting" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip">
        <TextView android:textSize="60.0sp" android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:id="@id/heart_rate_setting_value_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/font_14" android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/label_heart_rate_desc_and_unit" />
        <Button android:textSize="@dimen/font_14" android:textColor="#ff000000" android:layout_gravity="center_horizontal" android:id="@id/heart_rate_setting_btn" android:background="@drawable/bg_heart_rate_customize_corners_black" android:layout_width="120.0dip" android:layout_height="35.0dip" android:layout_marginTop="15.0dip" android:text="@string/label_heart_rate_customize" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_14" android:textColor="#ff000000" android:gravity="center|left" android:layout_gravity="center_vertical" android:background="#fff6f6f6" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/label_heart_rate_interval" />
        <com.beastbikes.android.ble.ui.widget.HeartRateIntervalItemView android:id="@id/heart_rate_recovery_area_view" android:layout_width="fill_parent" android:layout_height="40.0dip" app:interval_label="@string/label_heart_rate_recovery_area" app:interval_background_color="#fff6a09a" />
        <com.beastbikes.android.ble.ui.widget.HeartRateIntervalItemView android:id="@id/heart_rate_burning_fat_area_view" android:layout_width="fill_parent" android:layout_height="40.0dip" app:interval_label="@string/label_heart_rate_burning_fat_area" app:interval_background_color="#fff06c63" />
        <com.beastbikes.android.ble.ui.widget.HeartRateIntervalItemView android:id="@id/heart_rate_target_area_view" android:layout_width="fill_parent" android:layout_height="40.0dip" app:interval_label="@string/label_heart_rate_train_area" app:interval_background_color="#ffe8372d" />
        <com.beastbikes.android.ble.ui.widget.HeartRateIntervalItemView android:id="@id/heart_rate_anaerobic_area_view" android:layout_width="fill_parent" android:layout_height="40.0dip" app:interval_label="@string/label_heart_rate_anaerobic_area" app:interval_background_color="#ffc91c03" />
        <com.beastbikes.android.ble.ui.widget.HeartRateIntervalItemView android:id="@id/heart_rate_limit_area_view" android:layout_width="fill_parent" android:layout_height="40.0dip" app:interval_label="@string/label_heart_rate_limit_area" app:interval_background_color="#ff931506" />
    </LinearLayout>
</FrameLayout>